--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -2,13 +2,17 @@
 
 <HTML>
 <HEAD>
+	<title>About</title>
+	<link rel="icon" href="/img/weather.png">
 	<link rel="stylesheet" type="text/css" href="/css/styles.css">
 	<script type="text/javascript" src="js/app.js "></script>
 </HEAD>
 <BODY>
-
-	<h1>{{title}}</h1>
-	<h4>Created by {{name}}</h4>
+	<div class="main-content">
+		{{>header}}
+		<img class="robot" src="img/robot.png">
+	</div>
+	{{>footer}}
 	
 </BODY>
 </HTML>
